# argparser

./: .travis.yml  CMakeLists.txt  README.md  TODO
examples/: CMakeLists.txt  commands.cpp  custom.cpp  format.cpp  tmp.cpp
include/argparser/: all.hpp  argparser.hpp  common.hpp  convert.hpp  flag-manager.hpp  flag-store.hpp  flag-validator.hpp  flag.hpp  parser.hpp
release/: argparser.hpp  release.sh
src/: helloworld.cpp
test/: CMakeLists.txt  cmd.cpp  flag_store.cpp  global_flag.cpp  misc.cpp  parse_combined_flag.cpp  parse_custom.cpp  parse_flag.cpp  release-ok.cpp
